# Reasoning-Structures-Clinical-Diagnosis

./: README.md  main.py  progress_log.txt  pyproject.toml  run_with_log.sh
src/tot/: models.py
src/tot/data/thyroid/data_clean_scripts/: balanced_500_with_text_cleaned.py  build_small_eval_dataset.py  discharge_radiology_random_cleaned.py  discharge_radiology_thyroid_cleaned.py  full_with_text_cleaned.py
src/tot/data/thyroid/info_extraction_scripts/: extract_thyroid_info.py  llm_debug.py  llm_interface.py  llm_interface_random.py  strict_clean_llm_results.py
src/tot/data/thyroid/info_extraction_scripts/prompt/: extract_thyroid_related.txt
src/tot/data/thyroid/mimiciv_hosp/: ICD_name.sql  patients_info_1.sql  test_name.sql  thyroid_diagnosis_1.sql  thyroid_labs_full_1.sql
src/tot/data/thyroid/mimiciv_note/: discharge_notes_with_thyroid_lab_and_diagnosis.sql  random_patients_with_notes.sql  thyroid_patients_with_notes.sql
src/tot/methods/: __init__.py  bfs.py  bot.py  cot.py  dtree.py  evaluate_dtree.py  evaluate_utils.py  llm_call_api.py  pure_llm.py
src/tot/prompts/: thyroid_lab_task.py
src/tot/tasks/: __init__.py  thyroid_lab_task.py
